--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
       <section class="profile page__section">
         <div class="profile__image"></div>
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <h1 class="profile__title"></h1>
           <button class="profile__edit-button" type="button"></button>
-          <p class="profile__description">Исследователь океана</p>
+          <p class="profile__description"></p>
         </div>
         <button class="profile__add-button" type="button"></button>
       </section>
@@ -73,20 +73,34 @@
         <p class="popup__caption"></p>
       </div>
     </div>
-  </div>
-
-  <template id="card-template">
-    <li class="places__item card">
-      <img class="card__image" src="" alt="" />
-      <button type="button" class="card__delete-button"></button>
-      <div class="card__description">
-        <h2 class="card__title">
-        </h2>
-        <button type="button" class="card__like-button"></button>
+    <div class="popup popup_type_update-avatar">
+      <div class="popup__content">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form" name="new-avatar" novalidate>
+          <input type="url" id="link-input" name="link" class="popup__input popup__input_type_url"
+            placeholder="Ссылка на картинку" required>
+          <span class="link-input-error popup__error"></span>
+          <button type="submit" class="button popup__button">Сохранить</button>
+        </form>
       </div>
-    </li>
-  </template>
-  <!-- <script type="module" src="./index.js" defer></script> -->
+    </div>
+
+    <template id="card-template">
+      <li class="places__item card">
+        <img class="card__image" src="" alt="" />
+        <button type="button" class="card__delete-button"></button>
+        <div class="card__description">
+          <h2 class="card__title">
+          </h2>
+          <div class="card__like-container">
+            <button type="button" class="card__like-button"></button>
+            <span class="card__like-count">0</span>
+          </div>
+        </div>
+      </li>
+    </template>
+    <!-- <script type="module" src="./index.js" defer></script> -->
 </body>
 
 </html>
